--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
 		"string"
 	],
 	"SystemFoldersToExclude": [
-		[],
-		"array"
-	],
+        [],
+        "array"
+    ],
 	"SystemFoldersToExclude_Description": [
-		"List of folder types to exclude. Possible values: 1 - Inbox, 2 - Sent, 3 - Drafts, 4 - Spam, 5 - Trash, 6 - Virus",
-		"string"
-	]
+        "List of folder types to exclude. Possible values: 1 - Inbox, 2 - Sent, 3 - Drafts, 4 - Spam, 5 - Trash, 6 - Virus, 11 - All mail",
+        "string"
+    ]
 }
